<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/btnInput"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        app:cardBackgroundColor="#233f6c"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOutput"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_baseline_input"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="143dp"
            android:contentDescription="@string/input_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:padding="5dp"
            android:text="@string/input"
            android:textColor="#ffffff"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="205dp" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/btnOutput"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        app:cardBackgroundColor="#cc0000"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnInput"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="5dp"
            android:rotation="180"
            app:srcCompat="@drawable/ic_baseline_input"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="143dp"
            android:contentDescription="@string/output_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:padding="5dp"
            android:text="@string/output"
            android:textColor="#ffffff"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="205dp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btnSettingsMain"
        android:layout_width="95dp"
        android:layout_height="93dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings"
        android:contentDescription="@string/settings_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>