<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/documentOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_card"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGetOut"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:background="@drawable/btn_round"
        android:text="@string/get_out"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/homeOutput"
        android:layout_width="67dp"
        android:layout_height="49dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetOut"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_home"
        android:contentDescription="@string/home_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>