<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutServerIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/serverIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:hint="@string/server_ip"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="15"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_round_red"
        android:text="@string/get_back"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_round"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerParkingLot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutServerIp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutServerSocket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerParkingLot">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/serverSocketIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:hint="@string/server_socket_ip"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="15"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutServerSocketPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutServerSocket">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/serverSocketPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:hint="@string/server_socket_port"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="15"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>