<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            card_view:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/document"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="21"
                android:hint="@string/document"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            card_view:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="21"
                android:hint="Primer Apellido"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutSecondsurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            card_view:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondsurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="21"
                android:hint="Segundo Apellido"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            card_view:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="21"
                android:hint="Primer Nombre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutSecondname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            card_view:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="21"
                android:hint="Segundo Nombre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow android:layout_width="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    card_view:hintTextAppearance="@style/Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:ems="7"
                        android:hint="Sexo"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLength="1"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    card_view:hintTextAppearance="@style/Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:ems="11"
                        android:hint="Fecha Nacimiento"
                        android:importantForAutofill="no"
                        android:inputType="date"
                        android:maxLength="20"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>
        </TableLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            card_view:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="21"
                android:hint="Teléfono"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            card_view:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="21"
                android:hint="Dirección"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow android:layout_width="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    card_view:hintTextAppearance="@style/Hint"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.5"
                    card_view:layout_constraintStart_toEndOf="@+id/textInputLayoutPhone"
                    card_view:layout_constraintTop_toBottomOf="@+id/textInputLayoutDateBirth">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:ems="10"
                        android:hint="Temperatura"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="4"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutChildren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    card_view:hintTextAppearance="@style/Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/children"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:ems="10"
                        android:hint="Niños a Cargo"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="2"
                        android:text="0"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>
        </TableLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <LinearLayout
            android:id="@+id/editTextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <!--/////////////////////////////////////////////////////////////-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:id="@+id/home"
                android:layout_width="67dp"
                android:layout_height="49dp"
                card_view:layout_constraintEnd_toStartOf="@+id/getIn"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/ic_baseline_home" />

            <Button
                android:id="@+id/getIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round"
                android:text="Ingresar"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toEndOf="@+id/home"
                card_view:layout_constraintTop_toTopOf="parent" />

            <!--            <ImageView-->
            <!--                android:id="@+id/btnSettingsInput"-->
            <!--                android:layout_width="67dp"-->
            <!--                android:layout_height="49dp"-->
            <!--                card_view:layout_constraintEnd_toEndOf="parent"-->
            <!--                card_view:layout_constraintHorizontal_bias="0.5"-->
            <!--                card_view:layout_constraintStart_toEndOf="@+id/getIn"-->
            <!--                card_view:layout_constraintTop_toTopOf="parent"-->
            <!--                card_view:srcCompat="@drawable/ic_baseline_settings" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--/////////////////////////////////////////////////////////////-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow android:layout_width="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutAvailable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    card_view:hintTextAppearance="@style/Hint">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/space"
                        android:textColor="#1774BD"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/no_data"
                        android:textColor="#1774BD"
                        android:textSize="25sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutOccupation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    card_view:hintTextAppearance="@style/Hint">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/occupation"
                        android:textColor="#cc0000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/occupation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/no_data"
                        android:textColor="#cc0000"
                        android:textSize="25sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>
